# voip-relayer-rs

./: .env.copy  Cargo.toml  Dockerfile  README.md  docker-compose.yml
artifacts/eth/bridge/: bridge.json
src/: main.rs
